# PinguinType

./: CMakeLists.txt
PinguinType/: CMakeLists.txt
PinguinType/Resources/: icons.qrc  themes.json
PinguinType/SourceFiles/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
PinguinType/SourceFiles/CustomWidgets/AnimatedHoverButton/: animatedhoverbutton.cpp  animatedhoverbutton.h
PinguinType/SourceFiles/CustomWidgets/CustomDialog/: customdialog.cpp  customdialog.h  customdialog.ui
PinguinType/SourceFiles/CustomWidgets/CustomFrame/: customframe.cpp  customframe.h
PinguinType/SourceFiles/CustomWidgets/CustomTextBrowser/: customtextbrowser.cpp  customtextbrowser.h  state.h
PinguinType/SourceFiles/CustomWidgets/CustomToolTip/: customtooltip.cpp  customtooltip.h
